# AI_multimodal_platform

./: .env.example  .gitattributes  .gitignore  AGENTS.md  AI_COLLABORATION.md  README.md  README_ORIGINAL.md  claude-design.md  conversation_last_half_export.md  docker-compose.vertex.yml  docker-compose.yml  original_agents.md  ui_refactor_plan.md
backend/: .dockerignore  Dockerfile  pyproject.toml
backend/app/: celery_app.py  config.py  db.py  main.py  models.py  project.toml  prompt_enhancement.py  schemas.py  state_machine.py  worker.py
backend/app/api/: assets.py  files.py  generations.py  health.py  metrics.py  ops.py  pipelines.py  prompts.py
backend/app/services/: __init__.py  mock_media.py  rate_limit.py  retry.py  storage.py
backend/tests/: test_asset_api.py  test_celery_app.py  test_celery_tasks.py  test_ci_workflow.py  test_compose_worker_service.py  test_db_schema_sync.py  test_enqueue.py  test_gcp_autoscaling_readiness.py  test_gcp_cost_control_runbook.py  test_gcp_hpa_readiness.py  test_gcp_k8s_rollout.py  test_gcp_monitoring_readiness.py  test_gcp_monitoring_slo_readiness.py  test_generation_api.py  test_health.py  test_i2v_guard.py  test_job_handlers.py  test_job_runner.py  test_main_lifespan.py  test_mock_provider.py  test_mock_smoke_workflow.py  test_model_relationships.py  test_ops_api.py  test_ops_metrics.py  test_ops_runtime.py  test_outbox.py  test_outbox_dispatcher.py  test_pipeline_api.py  test_pipeline_link.py  test_prompt_api.py  test_prompt_enhancer.py  test_rate_limiter.py  test_reenqueue_pending.py  test_retry.py  test_setup_local_script.py  test_smoke_mock_golden_path_script.py  test_smoke_mock_i2v_duplicate_script.py  test_smoke_mock_retry_script.py  test_state_machine.py  test_storage.py  (+8 more)
evals/prompt_enhancement/: .dockerignore  README.md  benchmark.v1.jsonl  benchmark.v2.jsonl  finalize_vertex_pilot.py  generate_pairs.py  pilot.py  pilot_policy.v1.json  pyproject.toml  run_mock_e2e.py  run_vertex_pilot.py  schemas.py  score_pairs.py  score_real_pairs.py  summarize.py  verify_mock.py
evals/prompt_enhancement/fixtures/: benchmark.failure.v1.jsonl  manifest.valid.v1.json
evals/prompt_enhancement/offline/: Dockerfile  Dockerfile.cuda  __init__.py  canonical_prompt_reviews.v1.json  canonical_prompt_reviews.v2.json  offline_scorers.py  requirements-adapters.lock.txt  requirements-runtime.in  requirements-runtime.lock.txt  run_smoke.py  scorer_profile.v1.json  scorer_profile.v2.json  tifa_questions.v1.jsonl  tifa_questions.v2.jsonl
evals/prompt_enhancement/tests/: test_generate_pairs.py  test_metrics.py  test_offline_scorers.py  (+5 more)
(+224 files in other folders)
