[project]
name = "multimodal-backend"
version = "0.1.0"
description = "AI multimodal content-generation platform backend"
requires-python = ">=3.11"
dependencies = [
  "fastapi>=0.115,<0.117",
  "uvicorn[standard]>=0.30,<0.33",
  "sqlalchemy[asyncio]>=2.0,<2.1",
  "asyncpg>=0.29,<0.31",
  "pydantic>=2.8,<3.0",
  "pydantic-settings>=2.4,<3.0",
  "celery[redis]>=5.4,<5.6",
  "google-genai>=0.8,<2.0",
  "httpx>=0.27,<0.29",
  "python-multipart>=0.0.9,<1.0",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.0,<9.0",
  "pytest-asyncio>=0.23,<0.25",
  "pytest-cov>=5.0,<6.0",
  "httpx>=0.27,<0.29",
  "anyio>=4.0,<5.0",
]

[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["."]
include = ["app*"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
addopts = "-ra --strict-markers"
